# school_roster.app

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: auto-assign-project.yml  auto-assign.yml  build.yml  release.yml
scripts/: download-model.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240903155251_create_subjects.sql  20240903155254_create_groups.sql  20240903155258_create_students.sql  20250601191401_create_config.sql  20250605023613_create_school_table.sql
src-tauri/models/: model.onnx
src-tauri/src/: db.rs  generate.rs  lib.rs  main.rs
src-tauri/src/class/: classrooms.rs  groups.rs  subjects.rs  teachers.rs
src-tauri/src/util/: ai.rs  assignments.rs  constraints.rs  file_handler.rs  generate.rs  mod.rs  optimize.rs  settings.rs  xlsx.rs
src/lib/components/buttons/: ColorPicker.svelte  ConfirmModal.svelte  ToggleDarkTheme.svelte  WarningModal.svelte
src/lib/components/grid/: ClassroomContextMenu.svelte  GridView.svelte  SubjectsPanel.svelte
src/lib/components/navbar/: Navbar.svelte  NavbarItem.svelte  (+1 more)
src/lib/stores/: AssignmentUndoRedo.ts  StackUndoRedo.ts  notificationsStore.ts  usedColors.ts
src/lib/utilities/: fileHandler.ts  generateAlgorithm.ts  helpers.ts  schedule.ts
src/routes/: +layout.ts  +page.svelte
src/styles/: chat.scss  config.scss  context_menu.scss  global.scss  grid.scss  nav.scss  notification.scss  schedule_preview.scss  teachers-lists.scss  tooltip.scss  tutorial.scss  welcome.scss  zoom_blur.scss
src/styles/form/: desing.scss  editor.scss
(+37 files in other folders)
