[package]
name = "school_roster"
version = "0.1.2"
description = "A fast school roster app"
authors = ["Victor Rodriguez <awtGerry@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "school_roster_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-all", "dialog-all", "window-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.12.15", features = [ "json" ] }
tokio = { version = "1.40.0", features = ["time", "rt", "macros"] }
# sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio", "macros"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
# calamine = "0.26.1"
bincode = "1.3.3"
thiserror = "2.0.12"
chrono = "0.4.40"
# zip = "=0.6.6"

time = "0.3.36"
tract-onnx = "0.21.12"
tokenizers = "0.13.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
